# debateai

./: README.md  _config.yml  agent_helpers.py  config.py  constants.py  debate.py  debate_20250323_165745.json  debate_20250323_170042.json  debate_20250323_170406.json  debate_20250323_170713.json  debate_20250323_171421.json  index.md  jekyll_transcript.py  logger.py  main.py  pyproject.toml  transcript.py
_layouts/: default.html  post.html
_posts/: 2025-03-23-artificial-intelligence-regulation.md  2025-03-23-climate-change-action.md  2025-03-23-gun-control.md  2025-03-23-immigration-policy.md  2025-03-24-artificial-intelligence-regulation.md  2025-03-24-climate-change-action.md  2025-03-25-immigration-policy.md  2025-03-26-gun-control.md  2025-03-27-healthcare-system.md  2025-03-28-economic-inequality.md  2025-03-29-social-media-regulation.md  2025-03-30-education-reform.md  2025-03-31-privacy-vs-security.md  2025-04-01-genetic-engineering.md  2025-04-02-artificial-intelligence-regulation.md  2025-04-03-climate-change-action.md  2025-04-04-immigration-policy.md  2025-04-05-gun-control.md  2025-04-06-healthcare-system.md  2025-04-07-economic-inequality.md  2025-04-08-social-media-regulation.md  2025-04-09-education-reform.md  2025-04-10-privacy-vs-security.md  2025-04-11-genetic-engineering.md  2025-04-12-artificial-intelligence-regulation.md  2025-04-14-climate-change-action.md  2025-04-15-immigration-policy.md  2025-04-16-gun-control.md  2025-04-17-healthcare-system.md  2025-04-18-economic-inequality.md  2025-04-19-social-media-regulation.md  (+436 more)
assets/css/: style.css  (+1 more)
(+473 files in other folders)
