[project]
name = "debatai"
version = "0.1.0"
description = ""
authors = [
    {name = "Alain Scialoja",email = "me@alainscialoja.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai-agents (>=0.0.4,<0.0.5)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
